@startuml
right header
<font size=24 color=black>Package: <b> ERM_0.2

end header

title
<font size=18 color=black> Електронний реєстр документів
<font size=16 color=black> ER-модель

end title

package Domain {
	
	package DataStructurization {
		entity Document #eeeeff {
			header
			description
		}
		
		entity Metadata #ffeeee {
                        key
                        value
                }

		entity Tag #eeeeff {
			value
		}
	
		entity Link #ffffcc
	
	}
}


package AccessPolicy {
	
	entity Role #eeeeff {
		name
		description
	}

	entity Assignment #ffffcc
	
	entity OperationType #eeeeff {
		name
	}
	
	entity ObjectType #eeeeff {
		name
	}
	
	entity RequestType #ffffcc {
		name
	}
	
	entity Grant #ffffcc
	
	object archive #ffffff
	object record #ffffff
	object user #ffffff
	object role #ffffff
	object tag #ffffff
	
	
	object create #ffffff
	object read #ffffff
	object update #ffffff
	object delete #ffffff
	
	object admin #ffffff
	object editor #ffffff
	object viewer #ffffff
	object guest #ffffff
}

package UserProfileManagment {
	entity User #eeeeff {
		name
		email
	}
}


package HistoryManagement {
        entity Event #eeeeff {
                date
        }
        entity Extra #ffeeee {
                key
                value
        }
}

Link "0.*" --> "1.1" Document
Link "0.*" --> "1.1" Tag

Metadata "0.*" --> "1.1" Document

Assignment "0.*" ---> "1.1" User
Assignment "0.*" ---> "1.1" Role

RequestType "0.*" --> "1.1" OperationType
RequestType "0.*" --> "1.1" ObjectType

Grant "0.*" ---u-> "0.1" User
Grant "0.*" --> "0.1" Role
Grant "0.*" ---> "1.1" RequestType

Event "0.*" -l---> "1.1" User

Extra "0.*" ---> "1.1" Event

ObjectType <.. archive : instanceOf
ObjectType <.. record : instanceOf
ObjectType <.. user : instanceOf
ObjectType <.. role : instanceOf
ObjectType <.. tag : instanceOf

OperationType <.. create : instanceOf
OperationType <.. read : instanceOf
OperationType <.. update : instanceOf
OperationType <.. delete : instanceOf

Role <.. admin : instanceOf
Role <.. editor : instanceOf
Role <.. viewer : instanceOf
Role <.. guest : instanceOf

right footer

НТУУ КПІ ім.І.Сікорського
Київ-2020
end footer
@enduml

